--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,15 @@
 #zeebe.client.cloud.clientId=2dO3qtHXo.yB4QuMP~JB5sXzAGxD41VB
 #zeebe.client.cloud.clientSecret=XNrfH0WqFiqlC0m7o_Ic8iy7bK9Hk2DyIscQsL1A7ZzpqIecxj9aYgAD-qwbiC5s
 
-zeebe.client.gateway.address=localhost:26500
+zeebe.client.broker.gateway-address=127.0.0.1:26500
 zeebe.client.security.plaintext=true
+zeebe.client.connection-mode=ADDRESS
+
+# change below to your keycloak url
+zeebe.client.cloud.auth-url=http://localhost:18080/auth/realms/camunda-platform/protocol/openid-connect/token
+zeebe.client.cloud.client-id=msjo-client
+zeebe.client.cloud.client-secret=
+zeebe.client.cloud.credentials-cache-path=/Users/minsoojo/.camunda/credentials.library-poc
+
+# 8080은 Camunda Identity가 사용해야 함.
+server.port=9090
