add disable WARN message

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ zeebe.client.connection-mode=ADDRESS
 
 # change below to your keycloak url
 zeebe.client.cloud.auth-url=http://localhost:18080/auth/realms/camunda-platform/protocol/openid-connect/token
-zeebe.client.cloud.client-id=msjo-client
+zeebe.client.cloud.client-id=library-poc
 zeebe.client.cloud.client-secret=
 zeebe.client.cloud.credentials-cache-path=/Users/minsoojo/.camunda/credentials.library-poc
 
