ingress tls test completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,23 @@
+#### 여기는 SaaS에 접속할 때
 #zeebe.client.cloud.region=syd-1
 #zeebe.client.cloud.clusterId=cfa2d83d-7c86-4eec-88a5-84c51963f218
 #zeebe.client.cloud.clientId=2dO3qtHXo.yB4QuMP~JB5sXzAGxD41VB
 #zeebe.client.cloud.clientSecret=XNrfH0WqFiqlC0m7o_Ic8iy7bK9Hk2DyIscQsL1A7ZzpqIecxj9aYgAD-qwbiC5s
 
+#### 여기는 tls, ingress 모두 설정되어 있는 self managed에 접속할 때
+# keytool -keystore $JAVA_HOME/lib/security/cacerts -importcert -storepass changeit -file server.pem -alias camunda-demo-ingress
+#zeebe.client.broker.gateway-address=zeebe.camunda-demo-ingress.committed.co.kr
+#zeebe.client.security.plaintext=false
+#zeebe.client.security.cert-path=/Users/minsoojo/Workspaces/BPMN/certificate-demo/zeebe.pem
+#zeebe.client.cloud.auth-url=https://camunda-demo-ingress.committed.co.kr/auth/realms/camunda-platform/protocol/openid-connect/token
+#zeebe.client.cloud.client-id=library-poc
+#zeebe.client.cloud.client-secret=
+#zeebe.client.cloud.credentials-cache-path=/Users/minsoojo/.camunda/credentials.library-poc
+
+##### 여기는 self managed에 kubectl port-forward로 접속할 때 (ssl port forward포함)
 zeebe.client.broker.gateway-address=127.0.0.1:26500
 zeebe.client.security.plaintext=true
 zeebe.client.connection-mode=ADDRESS
-
-# change below to your keycloak url
 zeebe.client.cloud.auth-url=http://localhost:18080/auth/realms/camunda-platform/protocol/openid-connect/token
 zeebe.client.cloud.client-id=library-poc
 zeebe.client.cloud.client-secret=
@@ -15,3 +25,4 @@ zeebe.client.cloud.credentials-cache-path=/Users/minsoojo/.camunda/credentials.l
 
 # 8080은 Camunda Identity가 사용해야 함.
 server.port=9090
+
